src/objects/Education_Activity__c.object
<CustomObject>
    <fields>
        <fullName>CSOD_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>CSOD ID</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <description>Course Category for the Classes</description>
        <inlineHelpText>Course Category for the Classes</inlineHelpText>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>10.X Associate Certification</fullName>
                </value>
                <value>
                    <fullName>10.X Course</fullName>
                </value>
                <value>
                    <fullName>10.X Course Exam</fullName>
                </value>
                <value>
                    <fullName>2.X Course</fullName>
                </value>
                <value>
                    <fullName>9.X Certification</fullName>
                </value>
                <value>
                    <fullName>9.X Course</fullName>
                </value>
                <value>
                    <fullName>CSOD Testing</fullName>
                </value>
                <value>
                    <fullName>Customer Onsite Education</fullName>
                </value>
                <value>
                    <fullName>Jump Start</fullName>
                </value>
                <value>
                    <fullName>Jump Start Course Exam</fullName>
                </value>
                <value>
                    <fullName>MCMA Certification Track</fullName>
                </value>
                <value>
                    <fullName>MCMAD Certification Track</fullName>
                </value>
                <value>
                    <fullName>MCMA Fast Track Certification</fullName>
                </value>
                <value>
                    <fullName>MCMD Certification Track</fullName>
                </value>
                <value>
                    <fullName>MCSA Certification Track</fullName>
                </value>
                <value>
                    <fullName>MCSAD Certification Track</fullName>
                </value>
                <value>
                    <fullName>MCSAD Fast Track Certification</fullName>
                </value>
                <value>
                    <fullName>MCSA Fast Track Certification</fullName>
                </value>
                <value>
                    <fullName>MCSD Certification Track</fullName>
                </value>
                <value>
                    <fullName>MCSD Fast Track Certification</fullName>
                </value>
                <value>
                    <fullName>MSTR ED Certification</fullName>
                </value>
                <value>
                    <fullName>MSTR ED Training</fullName>
                </value>
                <value>
                    <fullName>MSTR World</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Certification_Type__c</fullName>
        <label>Certification Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Auto Approved</fullName>
                </value>
                <value>
                    <fullName>Approval Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Intelligence_Center_Roles__c</fullName>
        <label>Intelligent Enterprise Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intelligent_Enterprise_CertificationPath__c</fullName>
        <label>Intelligent Enterprise CertificationPath</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Intelligent_Enterprise_Persona__c</fullName>
        <label>Intelligent Enterprise Persona</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Version__c</fullName>
        <label>Cornerstone Latest Version</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLT_Intel_Enterprise_Certification_Path__c</fullName>
        <label>MLT Intel Enterprise Certification Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLT_Intelligence_Center_Roles__c</fullName>
        <label>MLT Intelligence Center Roles</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLT_Intelligent_Enterprise_Persona__c</fullName>
        <label>MLT Intelligent Enterprise Persona</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSTR_Certification_Type__c</fullName>
        <label>MSTR Certification Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSTR_Course_Type__c</fullName>
        <label>MSTR Course Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSTR_Platform__c</fullName>
        <description>MSTR Platform</description>
        <inlineHelpText>MSTR Platform</inlineHelpText>
        <label>MSTR Platform</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSTR_Recommended_Prerequisites__c</fullName>
        <label>MSTR Recommended Prerequisites</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Path__c</fullName>
        <label>Path</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <label>SKU</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Description__c</fullName>
        <label>Training Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Training_Price__c</fullName>
        <label>Training Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Training_Status__c</fullName>
        <label>Training Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Delete</fullName>
                </value>
                <value>
                    <fullName>Disapproved</fullName>
                </value>
                <value>
                    <fullName>Tentative</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Training_Version__c</fullName>
        <description>Training Version</description>
        <inlineHelpText>Training Version</inlineHelpText>
        <label>Cornerstone Training Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Event
Test
Online Class</description>
        <inlineHelpText>Event
Test
Online Class</inlineHelpText>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Universal_Code__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Meant for Certifications to provide details onto which UC Skill it should apply upon completion</description>
        <label>Universal Code</label>
        <referenceTo>Universal_Code__c</referenceTo>
        <relationshipLabel>Education Activities</relationshipLabel>
        <relationshipName>Education_Activities</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Education Activity</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Loaded_from_CS</fullName>
        <columns>NAME</columns>
        <columns>MSTR_Course_Type__c</columns>
        <columns>CSOD_ID__c</columns>
        <columns>Inactive__c</columns>
        <columns>Intelligence_Center_Roles__c</columns>
        <columns>Intelligent_Enterprise_Persona__c</columns>
        <columns>Intelligent_Enterprise_CertificationPath__c</columns>
        <columns>Latest_Version__c</columns>
        <columns>MSTR_Certification_Type__c</columns>
        <columns>MSTR_Platform__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CSOD_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Loaded from CS</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Education Activity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Education Activities</pluralLabel>
    <recordTypes>
        <fullName>Certification</fullName>
        <active>true</active>
        <label>Certification</label>
    </recordTypes>
    <recordTypes>
        <fullName>Class</fullName>
        <active>true</active>
        <label>Class</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>